<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">목적지 알림</string>
    <string name="settings">설정</string>
    <string name="start_tracking">추적 시작</string>
    <string name="stop_tracking">추적 중지</string>
    <string name="clear_destination">목적지 해제</string>
    <string name="click_map_to_set_destination">지도를 클릭하여 목적지를 설정하세요</string>
    <string name="destination_set">목적지가 설정되었습니다</string>
    <string name="tracking_started">추적을 시작합니다</string>
    <string name="tracking_stopped">추적을 중지합니다</string>
    <string name="permission_required">위치 권한이 필요합니다</string>
    <string name="notification_permission_required">알림 권한이 필요합니다</string>
</resources>
